Fix highlight overflow

--- a/_sass/blocks/highlight.sass
+++ b/_sass/blocks/highlight.sass
@@ -66,6 +66,7 @@
   background-color: #49483e
   padding: 5px
   margin-bottom: 20px
+  overflow: auto
 
 .highlighter-rouge
   background-color: #e6e6e6
